--- a/src/main/resources/templates/direccion.html
+++ b/src/main/resources/templates/direccion.html
@@ -1,111 +1,124 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-<title>DIRECCION CRUD</title>
-<link th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" rel="stylesheet"/>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-<link th:href="@{/webjars/font-awesome/css/all.css}" rel="stylesheet"/>
-<style>
-        body {
-            background-color: #f8f9fa;
-        }
-        .container {
-            margin-top: 50px;
-        }
-        .section {
-            padding: 20px;
-            margin-bottom: 30px;
-            background-color: #fff;
-            border-radius: 5px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        }
-        .form-group label {
-            font-weight: bold;
-        }
-</style>
-</head>
-<body>
+    <head>
+        <title>DIRECCION CRUD</title>
+        <link th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" rel="stylesheet"/>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+        <link th:href="@{/webjars/font-awesome/css/all.css}" rel="stylesheet"/>
+        <style>
+            body {
+                background-color: #f8f9fa;
+            }
+            .container {
+                margin-top: 50px;
+            }
+            .section {
+                padding: 20px;
+                margin-bottom: 30px;
+                background-color: #fff;
+                border-radius: 5px;
+                box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            }
+            .form-group label {
+                font-weight: bold;
+            }
+            .btn-secondary {
+                background-color: #6c757d;
+                color: #fff;
+                border: none;
+                padding: 8px 15px;
+                border-radius: 5px;
+                cursor: pointer;
+                transition: background-color 0.3s ease;
+            }
+        </style>
+    </head>
+    <body>
 
- 
 
-<div class="container">
-<div class="section">
-<div class="row">
-<div class="col-md-6">
-<h1><i class="fas fa-eye"></i> READ</h1>
-<table class="table">
-<thead>
-<tr>
-<th>ID Dirección</th>
-<th>Referencias</th>
-</tr>
-</thead>
-<tbody>
-<tr th:each="direccion : ${direcciones}">
-<td th:text="${direccion.idDireccion}"></td>
-<td th:text="${direccion.referencias}"></td>
-</tr>
-</tbody>
-</table>
-</div>
 
- 
+        <div class="container">
+            <div class="section">
+                <div class="row">
+                    <div class="col-md-6">
+                        <h1><i class="fas fa-eye"></i> READ</h1>
+                        <table class="table">
+                            <thead>
+                                <tr>
+                                    <th>ID Dirección</th>
+                                    <th>Referencias</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr th:each="direccion : ${direcciones}">
+                                    <td th:text="${direccion.idDireccion}"></td>
+                                    <td th:text="${direccion.referencias}"></td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
 
-            <div class="col-md-6">
-<div class="section">
-<h1><i class="fas fa-plus"></i> CREATE</h1>
-<form action="/direcciones/agregar" method="post">
-<div class="form-group">
-<label for="referencias">Dirección:</label>
-<input type="text" id="referencias" name="referencias" class="form-control" required>
-</div>
-<button type="submit" class="btn btn-primary"><i class="fas fa-check"></i> Agregar Dirección</button>
-</form>
-<p>[[${mensaje}]]</p>
-</div>
 
- 
 
-                <div class="section">
-<h1><i class="fas fa-pencil-alt"></i> UPDATE</h1>
-<form onsubmit="return redireccionar(event)">
-<div class="form-group">
-<label for="numero">ID:</label>
-<input type="number" id="numero" class="form-control" required>
-</div>
-<button type="submit" class="btn btn-secondary"><i class="fas fa-edit"></i> Ir a editar</button>
-</form>
-</div>
+                    <div class="col-md-6">
+                        <div class="section">
+                            <h1><i class="fas fa-plus"></i> CREATE</h1>
+                            <form action="/direcciones/agregar" method="post">
+                                <div class="form-group">
+                                    <label for="referencias">Dirección:</label>
+                                    <input type="text" id="referencias" name="referencias" class="form-control" required>
+                                </div>
+                                <button type="submit" class="btn btn-primary"><i class="fas fa-check"></i> Agregar Dirección</button>
+                            </form>
+                            <p>[[${mensaje}]]</p>
+                        </div>
 
- 
 
-                <div class="section">
-<h1><i class="fas fa-trash-alt"></i> DELETE</h1>
-<form th:action="@{/direcciones/eliminar}" method="post">
-<div class="form-group">
-<label for="idEliminar">ID:</label>
-<input type="number" id="idEliminar" name="idEliminar" class="form-control" required>
-</div>
-<button type="submit" class="btn btn-danger"><i class="fas fa-trash"></i> Eliminar</button>
-</form>
-</div>
-</div>
-</div>
-</div>
-</div>
 
- 
+                        <div class="section">
+                            <h1><i class="fas fa-pencil-alt"></i> UPDATE</h1>
+                            <form onsubmit="return redireccionar(event)">
+                                <div class="form-group">
+                                    <label for="numero">ID:</label>
+                                    <input type="number" id="numero" class="form-control" required>
+                                </div>
+                                <button type="submit" class="btn btn-secondary"><i class="fas fa-edit"></i> Ir a editar</button>
+                            </form>
+                        </div>
 
-<script>
-    function redireccionar(event) {
-        event.preventDefault();
-        var numero = document.getElementById("numero").value;
-        window.location.href = "/direcciones/" + numero + "/editar";
-        return false;
-    }
-</script>
 
- 
 
-</body>
+                        <div class="section">
+                            <h1><i class="fas fa-trash-alt"></i> DELETE</h1>
+                            <form th:action="@{/direcciones/eliminar}" method="post">
+                                <div class="form-group">
+                                    <label for="idEliminar">ID:</label>
+                                    <input type="number" id="idEliminar" name="idEliminar" class="form-control" required>
+                                </div>
+                                <button type="submit" class="btn btn-danger"><i class="fas fa-trash"></i> Eliminar</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Botón para regresar al inicio -->
+            <div class="mt-5">
+                <a href="/" class="btn btn-secondary"><i class="fas fa-arrow-left"></i> Regresar al Inicio</a>
+            </div>
+        </div>
+
+
+
+        <script>
+            function redireccionar(event) {
+                event.preventDefault();
+                var numero = document.getElementById("numero").value;
+                window.location.href = "/direcciones/" + numero + "/editar";
+                return false;
+            }
+        </script>
+
+
+
+    </body>
 </html>
