--- a/src/main/resources/templates/empresa.html
+++ b/src/main/resources/templates/empresa.html
@@ -1,86 +1,148 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <title>EMPRESA CRUD</title>
-</head>
-<body>
-<h1>READ</h1>
-<table>
-    <thead>
-    <tr>
-        <th>ID Empresa</th>
-        <th>Nombre Empresa</th>
-        <th>Identificación</th>
-        <th>Fecha Ingreso</th>
-        <th>Fecha Registro</th>
-        <th>Dirección</th>
-        <th>Observaciones</th>
-        <th>ID Tipo Empresa</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="empresa : ${empresas}">
-        <td th:text="${empresa.idEmpresa}"></td>
-        <td th:text="${empresa.nombreEmpresa}"></td>
-        <td th:text="${empresa.identificacion}"></td>
-        <td th:text="${empresa.fechaIngreso}"></td>
-        <td th:text="${empresa.fechaRegistro}"></td>
-        <td th:text="${empresa.direccion}"></td>
-        <td th:text="${empresa.observaciones}"></td>
-        <td th:text="${empresa.tipoEmpresa.idTipoEmpresa}"></td>
-    </tr>
-    </tbody>
-</table>
+    <head>
+        <!--  -->
+        <title>EMPRESA CRUD</title>
+        <link th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" rel="stylesheet"/>
+        <link th:href="@{/webjars/font-awesome/css/all.css}" rel="stylesheet"/>
+        <style>
+            body {
 
-<h1>CREATE</h1>
-<form action="/empresas/agregar" method="post" th:object="${empresa}">
-    <label for="nombreEmpresa">Nombre Empresa:</label>
-    <input type="text" id="nombreEmpresa" name="nombreEmpresa" required><br>
 
-    <label for="identificacion">Identificación:</label>
-    <input type="text" id="identificacion" name="identificacion" required><br>
+                background-color: #f8f9fa;
+            }
 
-    <label for="fechaIngreso">Fecha Ingreso:</label>
-    <input type="date" id="fechaIngreso" name="fechaIngreso" required><br>
+            .container {
 
-    <label for="fechaRegistro">Fecha Registro:</label>
-    <input type="date" id="fechaRegistro" name="fechaRegistro" required><br>
+                margin-top: 50px;
+            }
 
-    <label for="direccion">Dirección:</label>
-    <input type="text" id="direccion" name="direccion" required><br>
+            .section {
 
-    <label for="observaciones">Observaciones:</label>
-    <input type="text" id="observaciones" name="observaciones"><br>
+                background-color: #fff;
+                border-radius: 5px;
+                box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+                padding: 20px;
+                margin-bottom: 30px;
+            }
 
-    <label for="idTipoEmpresa">ID Tipo Empresa:</label>
-    <input type="text" id="idTipoEmpresa" name="tipoEmpresa.idTipoEmpresa" required><br>
+            .btn-custom {
 
-    <button type="submit">Agregar Empresa</button>
-</form>
-<p>[[${mensaje}]]</p>
+                background-color: #007bff;
+                color: #fff;
+                border: none;
+                padding: 8px 15px;
+                border-radius: 5px;
+                cursor: pointer;
+                transition: background-color 0.3s ease;
+            }
 
-<h1>UPDATE</h1>
-<form onsubmit="return redireccionar(event)">
-    <label for="numero">ID:</label>
-    <input type="number" id="numero" required><br>
-    <button type="submit">Ir a editar</button>
-</form>
+            .btn-custom:hover {
 
-<script>
-    function redireccionar(event) {
-        event.preventDefault();
-        var numero = document.getElementById("numero").value;
-        window.location.href = "/empresas/" + numero + "/editar";
-        return false;
-    }
-</script>
+                background-color: #0056b3;
+            }
 
-<h1>DELETE</h1>
-<form th:action="@{/empresas/eliminar}" method="post">
-    <label for="idEliminar">ID:</label>
-    <input type="number" id="idEliminar" name="idEliminar" required><br>
-    <button type="submit">Eliminar</button>
-</form>
+            .btn-secondary {
 
-</body>
+                background-color: #6c757d;
+                color: #fff;
+                border: none;
+                padding: 8px 15px;
+                border-radius: 5px;
+                cursor: pointer;
+                transition: background-color 0.3s ease;
+            }
+
+            .btn-secondary:hover {
+
+                background-color: #4e555a;
+            }
+
+        </style>
+    </head>
+    <body>
+        <div class="container mt-5">
+            <div class="section">
+                <h1 class="mb-4"><i class="fas fa-eye"></i> READ</h1>
+                <div class="table-responsive">
+                    <table class="table table-bordered">
+                        <thead>
+                            <tr>
+                                <th>ID Empresa</th>
+                                <th>Nombre Empresa</th>
+                                <th>Identificación</th>
+                                <th>Fecha Ingreso</th>
+                                <th>Fecha Registro</th>
+                                <th>Dirección</th>
+                                <th>Observaciones</th>
+                                <th>ID Tipo Empresa</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr th:each="empresa : ${empresas}">
+                                <td th:text="${empresa.idEmpresa}"></td>
+                                <td th:text="${empresa.nombreEmpresa}"></td>
+                                <td th:text="${empresa.identificacion}"></td>
+                                <td th:text="${empresa.fechaIngreso}"></td>
+                                <td th:text="${empresa.fechaRegistro}"></td>
+                                <td th:text="${empresa.direccion}"></td>
+                                <td th:text="${empresa.observaciones}"></td>
+                                <td th:text="${empresa.tipoEmpresa.idTipoEmpresa}"></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+            <div class="section">
+                <h1><i class="fas fa-plus"></i> CREATE</h1>
+                <form action="/empresas/agregar" method="post" th:object="${empresa}">
+                    <label for="nombreEmpresa">Nombre Empresa:</label>
+                    <input type="text" id="nombreEmpresa" name="nombreEmpresa" required><br>
+                    <label for="identificacion">Identificación:</label>
+                    <input type="text" id="identificacion" name="identificacion" required><br>
+                    <label for="fechaIngreso">Fecha Ingreso:</label>
+                    <input type="date" id="fechaIngreso" name="fechaIngreso" required><br>
+                    <label for="fechaRegistro">Fecha Registro:</label>
+                    <input type="date" id="fechaRegistro" name="fechaRegistro" required><br>
+                    <label for="direccion">Dirección:</label>
+                    <input type="text" id="direccion" name="direccion" required><br>
+                    <label for="observaciones">Observaciones:</label>
+                    <input type="text" id="observaciones" name="observaciones"><br>
+                    <label for="idTipoEmpresa">ID Tipo Empresa:</label>
+                    <input type="text" id="idTipoEmpresa" name="tipoEmpresa.idTipoEmpresa" required><br>
+                    <button type="submit" class="btn btn-custom"><i class="fas fa-check"></i> Agregar Empresa</button>
+                </form>
+                <p th:text="${mensaje}" class="text-success mt-2"></p>
+            </div>
+
+            <h1>UPDATE</h1>
+            <form onsubmit="return redireccionar(event)">
+                <label for="numero">ID:</label>
+                <input type="number" id="numero" required><br>
+                <button type="submit">Ir a editar</button>
+            </form>
+
+            <script>
+                function redireccionar(event) {
+                    event.preventDefault();
+                    var numero = document.getElementById("numero").value;
+                    window.location.href = "/empresas/" + numero + "/editar";
+                    return false;
+                }
+            </script>
+
+            <div class="section">
+                <h1>DELETE</h1>
+                <form th:action="@{/empresas/eliminar}" method="post">
+                    <label for="idEliminar">ID:</label>
+                    <input type="number" id="idEliminar" name="idEliminar" required><br>
+                    <button type="submit" class="btn btn-danger"><i class="fas fa-EDIT"></i> Eliminar</button>
+                </form>
+            </div>
+            <!-- Botón para regresar al inicio -->
+            <div class="mt-5">
+                <a href="/" class="btn btn-secondary"><i class="fas fa-arrow-left"></i> Regresar al Inicio</a>
+            </div>
+        </div>
+    </body>
 </html>
